[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "venusd-ble-mqtt"
version = "0.1.0"
description = "Poll a Marstek Venus/HM battery over BLE and publish telemetry to MQTT"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Marcus" }]
keywords = ["marstek", "venus", "ble", "mqtt", "battery", "home-automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Home Automation",
]
dependencies = [
    "bleak>=0.21",
    "paho-mqtt>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
venusd-ble-mqtt = "venusd_ble_mqtt.main:main"

[project.urls]
Homepage = "https://github.com/"
Issues = "https://github.com/"

[tool.setuptools.packages.find]
where = ["."]
include = ["venusd_ble_mqtt*"]
